# FastECU

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  FastECU.pro  MODULE.bazel  README.md  USING.txt  calibration_maps.cpp  calibration_maps.h  calibration_treewidget.cpp  calibration_treewidget.h  cipher.cpp  cipher.h  config.qrc  dataterminal.cpp  dataterminal.h  definition_file_convert.cpp  definition_file_convert.h  dtc_operations.cpp  dtc_operations.h  dtc_parser.cpp  dtc_parser.h  ecu_operations.cpp  ecu_operations.h  error_codes.h  expression_evaluator.cpp  expression_evaluator.h  file_actions.cpp  file_actions.h  file_defs_ecuflash.cpp  file_defs_romraider.cpp  get_key_operations_subaru.cpp  get_key_operations_subaru.h  hardening.pri  hexcommander.cpp  hexcommander.h  (+29 more)
apps/desktop/: BUILD.bazel  main.cpp
bazel/compile_commands/: BUILD.bazel  refresh_sonar.py
bazel/toolchains/windows_x86_clang_cl/: BUILD.bazel
bazel/toolchains/windows_x86_msvc/: BUILD.bazel
resources/desktop/: BUILD.bazel  fonts.qrc  icons.qrc  images.qrc
resources/desktop/hexedit/: qhexedit.qrc
resources/shared/: BUILD.bazel  config.qrc  kernels.qrc
resources/shared/config/: logger.cfg
src/algorithms/checksum/: BUILD.bazel  checksum_ecu_subaru_denso_sh705x_diesel.cpp  checksum_ecu_subaru_denso_sh705x_diesel.h  checksum_ecu_subaru_denso_sh7xxx.cpp  checksum_ecu_subaru_denso_sh7xxx.h  checksum_ecu_subaru_hitachi_m32r_can.cpp  checksum_ecu_subaru_hitachi_m32r_can.h  checksum_ecu_subaru_hitachi_m32r_kline.cpp  checksum_ecu_subaru_hitachi_m32r_kline.h  checksum_ecu_subaru_hitachi_sh7058.cpp  checksum_ecu_subaru_hitachi_sh7058.h  checksum_ecu_subaru_hitachi_sh72543r.cpp  checksum_ecu_subaru_hitachi_sh72543r.h  checksum_result.h  checksum_tcu_mitsu_mh8104_can.cpp  checksum_tcu_mitsu_mh8104_can.h  checksum_tcu_subaru_denso_sh7055.cpp  checksum_tcu_subaru_denso_sh7055.h  checksum_tcu_subaru_hitachi_m32r_can.cpp  checksum_tcu_subaru_hitachi_m32r_can.h  checksum_test.cpp  qt_checksum.h
src/algorithms/crypto/: BUILD.bazel  cipher.cpp  cipher.h  cipher_test.cpp  qt_cipher.cpp  qt_cipher.h
src/algorithms/diagnostics/: BUILD.bazel  diagnostics_test.cpp  dtc_parser.cpp  dtc_parser.h  nrc_parser.cpp  nrc_parser.h  qt_dtc_parser.cpp  qt_dtc_parser.h  qt_nrc_parser.cpp  qt_nrc_parser.h
src/algorithms/expression/: BUILD.bazel  expression_evaluator.cpp  expression_evaluator.h  expression_evaluator_test.cpp  qt_expression_evaluator.cpp  qt_expression_evaluator.h
src/algorithms/menu/: BUILD.bazel  menu_command.cpp  menu_command.h  menu_command_test.cpp  qt_menu_command.h
src/algorithms/protocol/: BUILD.bazel  bytes.h  bytes_test.cpp  qt_bytes.h
src/algorithms/protocol/colt/: BUILD.bazel  colt_test.cpp  mitsu_colt_can_cdbg_protocol.cpp  mitsu_colt_can_cdbg_protocol.h  mitsu_colt_can_protocol.cpp  mitsu_colt_can_protocol.h  mitsu_colt_can_vendor_ext_protocol.cpp  mitsu_colt_can_vendor_ext_protocol.h  qt_colt.h
src/algorithms/protocol/mut_dma/: BUILD.bazel  mut_dma_codec.cpp  mut_dma_freeform.cpp  mut_dma_freeform.h  mut_dma_memory.cpp  mut_dma_memory.h  mut_dma_test.cpp  qt_mut_dma.h
src/algorithms/protocol/ssm/: BUILD.bazel  ssm_protocol.cpp  ssm_protocol.h  ssm_protocol_core.cpp  ssm_protocol_core.h  ssm_protocol_core_test.cpp
src/backend/definitions/: BUILD.bazel  error_codes.h  file_actions.cpp  file_actions.h  file_defs_ecuflash.cpp  file_defs_romraider.cpp
src/backend/flash/: BUILD.bazel  flash_operation_worker.h  flash_utils.cpp  flash_utils.h
src/backend/flash/bdm/: BUILD.bazel  flash_ecu_subaru_denso_mc68hc16y5_02_bdm_operation.cpp
src/backend/flash/bootmode/: BUILD.bazel  flash_ecu_subaru_unisia_jecs_m32r_bootmode_operation.cpp  flash_ecu_subaru_unisia_jecs_m32r_bootmode_operation.h
src/backend/flash/ecu/: BUILD.bazel  (+20 more)
src/backend/logging/: BUILD.bazel  logging_conversion.cpp  logging_conversion.h  logging_conversion_test.cpp  logging_engine.cpp  logging_engine.h  logging_event_sink.h  logging_protocol.h  logging_protocol_coexistence_test.cpp  logging_session.cpp  logging_session.h  logging_session_test.cpp  logging_types.h  logging_use_case.cpp  logging_use_case.h  logging_use_case_test.cpp  logging_worker.cpp  logging_worker.h  portable_logging_protocol.h  romraider_conversion.cpp  romraider_conversion.h
src/backend/protocol/: BUILD.bazel  ican_transport.h  ikline_transport.h  imut_dma_init.cpp  imut_dma_init.h  issm_transport.h  mitsu_colt_can_cdbg_driver.cpp  mitsu_colt_can_cdbg_driver.h  mut_dma_driver.cpp  mut_dma_driver.h  transport_legacy_compat.h
src/ui/desktop/: BUILD.bazel  calibration_maps.h  calibration_treewidget.cpp  calibration_treewidget.h  dataterminal.cpp  definition_file_convert.cpp  dtc_operations.cpp  ecu_operations.cpp  get_key_operations_subaru.h  hexcommander.h  log_operations_ssm.cpp  logbox.cpp  logbox.h  logvalues.h  mainwindow.cpp  mainwindow.h  menu_actions.cpp  protocol_select.cpp  vehicle_select.cpp  vehicle_select.h  verticallabel.cpp
src/ui/desktop/biu/: BUILD.bazel  (+5 more)
tests/: .gitignore  BUILD.bazel  byte_test_utils.h  expected_message_box.h  fake_backend.h  fake_j2534_dll.cpp  fake_j2534_dll.def  j2534_bridge_client_test.cpp  j2534_bridge_integration_test.cpp  j2534_bridge_protocol_test.cpp  j2534_win_bridge_test.cpp  main.cpp  mock_openport.h  mut_dma_integration_tests.pro  pe_bitness_test.cpp  scripted_can_transport.h  scripted_kline_transport.h  scripted_logging_protocol.h  scripted_ssm_transport.h  serial_backend_main.cpp  serial_backend_tests.pro  serial_crash_tests.pro  test_bytes.cpp  test_bytes.h  test_bytes_main.cpp  test_cdbg_driver.cpp  test_cdbg_driver.h  test_cdbg_driver_main.cpp  test_cdbg_logging_protocol.cpp  test_cdbg_logging_protocol.h  test_cdbg_logging_protocol_main.cpp  test_checksum_results.cpp  test_checksum_results.h  test_checksum_results_main.cpp  test_codec.cpp  test_codec.h  test_codec_main.cpp  test_diagnostic_parsers.cpp  test_diagnostic_parsers.h  test_diagnostic_parsers_main.cpp  (+85 more)
tests/force_asserts/: BUILD.bazel  force_asserts.pro  tst_force_asserts.cpp
(+471 files in other folders)
