load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("//bazel:fastecu_sources.bzl", "APP_MAIN_SRCS")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_LINKOPTS", "QT_DEPS", "qt_cc_binary", "qt_cc_library")

package(default_visibility = ["//visibility:public"])

qt_cc_library(
    name = "fastecu_core_common",
    srcs = [],
    hdrs = [],
    deps = QT_DEPS + [
        "//src/algorithms/checksum",
        "//src/algorithms/crypto",
        "//src/algorithms/diagnostics",
        "//src/algorithms/expression",
        "//src/algorithms/menu",
        "//src/algorithms/protocol",
        "//src/algorithms/protocol/colt",
        "//src/algorithms/protocol/mut_dma",
        "//src/algorithms/protocol/ssm",
        "//src/backend/definitions",
        "//src/backend/flash",
        "//src/backend/flash/bdm",
        "//src/backend/flash/bootmode",
        "//src/backend/flash/ecu",
        "//src/backend/flash/eeprom",
        "//src/backend/flash/jtag",
        "//src/backend/flash/tcu",
        "//src/backend/logging",
        "//src/backend/logging/protocols",
        "//src/backend/protocol",
        "//src/platform/desktop/common/logging",
        "//src/platform/desktop/common/remote_utility",
        "//src/platform/desktop/common/remote_utility:remote_utility_replicas",
        "//src/platform/desktop/common/serial:serial_qt_compat",
        "//src/platform/desktop/common/serial:serial_replicas",
        "//src/platform/desktop/common/transport",
        "//src/ui/desktop",
        "@openssl",
    ],
)

# TRANSITIONAL. These names held the platform-specific j2534 sources
# directly until this step; the real targets now live in the per-platform
# packages below. Kept as aliases because bazel/gtest_targets.bzl and
# tests/BUILD.bazel still reference these root-level labels.
alias(
    name = "fastecu_platform_unix",
    actual = "//src/platform/desktop/unix/j2534:j2534",
)

alias(
    name = "fastecu_platform_windows",
    actual = "//src/platform/desktop/windows/j2534:j2534",
)

qt_cc_binary(
    name = "fastecu",
    srcs = APP_MAIN_SRCS,
    copts = COMMON_COPTS,
    linkopts = COMMON_LINKOPTS,
    deps = [
        ":fastecu_core_common",
    ] + select({
        "@platforms//os:windows": [":fastecu_platform_windows"],
        "//conditions:default": [":fastecu_platform_unix"],
    }),
)

py_test(
    name = "clang_tidy_runner_test",
    size = "small",
    srcs = [
        "scripts/clang_tidy_runner.py",
        "scripts/clang_tidy_runner_test.py",
    ],
    imports = ["scripts"],
    main = "scripts/clang_tidy_runner_test.py",
    deps = ["@python_deps//pyyaml"],
)

py_test(
    name = "bazel_openssl_wiring",
    size = "small",
    srcs = ["scripts/check-bazel-openssl.py"],
    data = [
        ".github/workflows/pr.yml",
        "BUILD.bazel",
        "MODULE.bazel",
    ],
    main = "scripts/check-bazel-openssl.py",
)

py_test(
    name = "openpty_includes",
    size = "small",
    srcs = ["scripts/check-openpty-includes.py"],
    data = ["//tests:cpp_sources"],
    main = "scripts/check-openpty-includes.py",
)

py_test(
    name = "windows_preprocessor_guards",
    size = "small",
    srcs = ["scripts/check-windows-preprocessor-guards.py"],
    data = [
        "//src/backend/definitions:file_actions.h",
        "//src/platform/desktop/common/serial:serial_port_actions_direct.h",
    ],
    main = "scripts/check-windows-preprocessor-guards.py",
)

py_binary(
    name = "clang_tidy_report",
    srcs = ["scripts/clang_tidy_runner.py"],
    args = [
        "report",
        "--compdb-tool",
        "$(location //bazel/compile_commands:refresh)",
    ],
    data = [
        ".clang-tidy",
        "//bazel/compile_commands:refresh",
    ],
    main = "scripts/clang_tidy_runner.py",
    deps = ["@python_deps//pyyaml"],
)

py_binary(
    name = "clang_tidy_fix",
    srcs = ["scripts/clang_tidy_runner.py"],
    args = [
        "fix",
        "--compdb-tool",
        "$(location //bazel/compile_commands:refresh)",
    ],
    data = [
        ".clang-tidy",
        "//bazel/compile_commands:refresh",
    ],
    main = "scripts/clang_tidy_runner.py",
    deps = ["@python_deps//pyyaml"],
)
