load("@rules_python//python:defs.bzl", "py_binary", "py_test")

package(default_visibility = ["//visibility:public"])

alias(
    name = "fastecu",
    actual = "//apps/desktop:fastecu",
)

py_test(
    name = "clang_tidy_runner_test",
    size = "small",
    srcs = [
        "scripts/clang_tidy_runner.py",
        "scripts/clang_tidy_runner_test.py",
    ],
    imports = ["scripts"],
    main = "scripts/clang_tidy_runner_test.py",
    deps = ["@python_deps//pyyaml"],
)

py_test(
    name = "bazel_openssl_wiring",
    size = "small",
    srcs = ["scripts/check-bazel-openssl.py"],
    data = [
        ".github/workflows/pr.yml",
        "MODULE.bazel",
        "//src/algorithms/crypto:BUILD.bazel",
    ],
    main = "scripts/check-bazel-openssl.py",
)

py_test(
    name = "portable_closure",
    size = "small",
    srcs = ["scripts/check-portable-closure.py"],
    data = [
        "//src/algorithms/checksum:BUILD.bazel",
        "//src/algorithms/crypto:BUILD.bazel",
        "//src/algorithms/diagnostics:BUILD.bazel",
        "//src/algorithms/expression:BUILD.bazel",
        "//src/algorithms/menu:BUILD.bazel",
        "//src/algorithms/protocol:BUILD.bazel",
        "//src/algorithms/protocol/colt:BUILD.bazel",
        "//src/algorithms/protocol/mut_dma:BUILD.bazel",
        "//src/algorithms/protocol/ssm:BUILD.bazel",
    ],
    main = "scripts/check-portable-closure.py",
)

py_test(
    name = "serial_compat_allowlist",
    size = "small",
    srcs = ["scripts/check-serial-compat-allowlist.py"],
    data = ["//src/platform/desktop/common/serial:BUILD.bazel"],
    main = "scripts/check-serial-compat-allowlist.py",
)

py_test(
    name = "openpty_includes",
    size = "small",
    srcs = ["scripts/check-openpty-includes.py"],
    data = ["//tests:cpp_sources"],
    main = "scripts/check-openpty-includes.py",
)

py_test(
    name = "windows_preprocessor_guards",
    size = "small",
    srcs = ["scripts/check-windows-preprocessor-guards.py"],
    data = [
        "//src/backend/definitions:file_actions.h",
        "//src/platform/desktop/common/serial:serial_port_actions_direct.h",
    ],
    main = "scripts/check-windows-preprocessor-guards.py",
)

py_binary(
    name = "clang_tidy_report",
    srcs = ["scripts/clang_tidy_runner.py"],
    args = [
        "report",
        "--compdb-tool",
        "$(location //bazel/compile_commands:refresh)",
    ],
    data = [
        ".clang-tidy",
        "//bazel/compile_commands:refresh",
    ],
    main = "scripts/clang_tidy_runner.py",
    deps = ["@python_deps//pyyaml"],
)

py_binary(
    name = "clang_tidy_fix",
    srcs = ["scripts/clang_tidy_runner.py"],
    args = [
        "fix",
        "--compdb-tool",
        "$(location //bazel/compile_commands:refresh)",
    ],
    data = [
        ".clang-tidy",
        "//bazel/compile_commands:refresh",
    ],
    main = "scripts/clang_tidy_runner.py",
    deps = ["@python_deps//pyyaml"],
)
