module(name = "fastecu")

bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "rules_python", version = "2.2.0")
bazel_dep(name = "rules_qt", version = "0.0.6")
bazel_dep(name = "platforms", version = "1.0.0")

single_version_override(
    module_name = "rules_qt",
    patch_strip = 1,
    patches = ["//bazel/patches:rules_qt_qt6111.patch"],
)

qt = use_extension("@rules_qt//extension:qt.bzl", "fetch")
qt.install(
    name = "qt_linux_x86_64",
    build_file = "@rules_qt//extension:qt/6.11.1/linux_x86_64.BUILD",
    os = "linux",
    version = "6.11.1",
)
qt.install(
    name = "qt_mac_aarch64",
    build_file = "@rules_qt//extension:qt/6.11.1/mac_aarch64.BUILD",
    os = "macos",
    version = "6.11.1",
)
qt.install(
    name = "qt_windows_x86_64",
    build_file = "@rules_qt//extension:qt/6.11.1/windows_x86_64.BUILD",
    os = "windows",
    version = "6.11.1",
    windows_architecture = "win64_msvc2022",
)
use_repo(
    qt,
    "qt_linux_x86_64",
    "qt_mac_aarch64",
    "qt_windows_x86_64",
)

register_toolchains("@rules_qt//tools:all")

openssl = use_extension("//bazel:openssl_ext.bzl", "openssl")
use_repo(openssl, "openssl")

msvc_sysroot = use_extension("//bazel/toolchains:msvc_sysroot_ext.bzl", "msvc_sysroot")
use_repo(msvc_sysroot, "msvc_sysroot")

register_toolchains("//bazel/toolchains/windows_x86_msvc:windows_x86_msvc_toolchain")
