module(name = "fastecu")

bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "rules_python", version = "2.2.0")
bazel_dep(name = "rules_qt", version = "0.0.6")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.14")
python.toolchain(python_version = "3.14")
use_repo(python, "python_3_14")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.14",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "python_deps")

single_version_override(
    module_name = "rules_qt",
    patch_strip = 1,
    patches = ["//bazel/patches:rules_qt_windows_addons.patch"],
)

qt = use_extension("@rules_qt//extension:qt.bzl", "fetch")
qt.install(
    name = "qt_linux_x86_64",
    build_file = "@rules_qt//extension:qt/6.8.3/linux_x86_64.BUILD",
    os = "linux",
    version = "6.8.3",
)
qt.install(
    name = "qt_mac_aarch64",
    build_file = "@rules_qt//extension:qt/6.8.3/mac_aarch64.BUILD",
    os = "macos",
    version = "6.8.3",
)
qt.install(
    name = "qt_windows_x86_64",
    build_file = "@rules_qt//extension:qt/6.8.3/windows_x86_64.BUILD",
    os = "windows",
    version = "6.8.3",
    windows_architecture = "win64_msvc2022",
)
use_repo(
    qt,
    "qt_linux_x86_64",
    "qt_mac_aarch64",
    "qt_windows_x86_64",
)

register_toolchains("@rules_qt//tools:all")

openssl = use_extension("//bazel:openssl_ext.bzl", "openssl")
use_repo(openssl, "openssl")

msvc_sysroot = use_extension("//bazel/toolchains:msvc_sysroot_ext.bzl", "msvc_sysroot")
use_repo(msvc_sysroot, "msvc_sysroot")

register_toolchains("//bazel/toolchains/windows_x86_msvc:windows_x86_msvc_toolchain")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

# Upstream HEAD still calls native.py_binary / native cc_binary, both removed in
# Bazel 9. Pin the commit + integrity via archive_override (it carries the patch
# hermetically) and patch hedron to load py_binary / cc_binary from
# rules_python / rules_cc. Bump the commit deliberately.
archive_override(
    module_name = "hedron_compile_commands",
    integrity = "sha256-Gwir/7++ifbb7mpbM3U3kugAT2o283wPchFb7IbmhyQ=",
    patch_strip = 1,
    patches = ["//bazel/patches:hedron_bazel9_py_binary.patch"],
    strip_prefix = "bazel-compile-commands-extractor-abb61a688167623088f8768cc9264798df6a9d10",
    urls = ["https://github.com/hedronvision/bazel-compile-commands-extractor/archive/abb61a688167623088f8768cc9264798df6a9d10.tar.gz"],
)
