load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:fastecu_sources.bzl", "MUT_DMA_INTEGRATION_TESTS_COMMON_HDRS", "MUT_DMA_INTEGRATION_TESTS_COMMON_SRCS", "MUT_DMA_TESTS_COMMON_SRCS", "SERIAL_BACKEND_TESTS_COMMON_HDRS", "SERIAL_BACKEND_TESTS_COMMON_SRCS", "SERIAL_BACKEND_TESTS_UNIX_HDRS", "SERIAL_BACKEND_TESTS_UNIX_SRCS", "SERIAL_CRASH_TESTS_COMMON_HDRS", "SERIAL_CRASH_TESTS_COMMON_SRCS")
load("//bazel:mut_dma_test_suites.bzl", "mut_dma_test_suites")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_LINKOPTS", "QT_DEPS", "local_test_hdrs", "local_test_srcs", "qt_cc_library", "qt_cc_test", "qt_cpp_moc_headers", "test_cpp_moc_srcs")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cpp_sources",
    srcs = glob(["*.cpp"]),
)

filegroup(
    name = "pro_files",
    srcs = [
        "mut_dma_integration_tests.pro",
        "serial_backend_tests.pro",
        "serial_crash_tests.pro",
        "tests.pro",
    ],
)

qt_cc_library(
    name = "test_header_mocs",
    srcs = [],
    hdrs = [
        "fake_backend.h",
        "mock_openport.h",
    ],
    copts = COMMON_COPTS,
    deps = QT_DEPS + ["//:fastecu_core_common"],
)

qt_cpp_moc_headers(
    name = "mut_dma_cpp_mocs",
    srcs = test_cpp_moc_srcs(MUT_DMA_TESTS_COMMON_SRCS),
    deps = QT_DEPS,
)

mut_dma_test_suites(
    header_mocs_target = ":test_header_mocs",
    moc_deps_target = ":mut_dma_cpp_mocs",
)

qt_cpp_moc_headers(
    name = "serial_backend_cpp_mocs",
    srcs = test_cpp_moc_srcs(SERIAL_BACKEND_TESTS_COMMON_SRCS + SERIAL_BACKEND_TESTS_UNIX_SRCS),
    deps = QT_DEPS,
)

qt_cc_test(
    name = "serial_backend_tests",
    srcs = local_test_srcs(SERIAL_BACKEND_TESTS_COMMON_SRCS) + local_test_hdrs(SERIAL_BACKEND_TESTS_COMMON_HDRS) + select({
        "@platforms//os:windows": [],
        "//conditions:default": local_test_srcs(SERIAL_BACKEND_TESTS_UNIX_SRCS) + local_test_hdrs(SERIAL_BACKEND_TESTS_UNIX_HDRS),
    }),
    copts = COMMON_COPTS + [
        "-I.",
        "-Itests",
        "-Iserial_port",
        "-Iprotocol",
    ],
    linkopts = COMMON_LINKOPTS,
    deps = QT_DEPS + [
        ":serial_backend_cpp_mocs",
        ":test_header_mocs",
        "//:fastecu_core_common",
    ] + select({
        "@platforms//os:windows": ["//:fastecu_platform_windows"],
        "//conditions:default": ["//:fastecu_platform_unix"],
    }),
)

qt_cpp_moc_headers(
    name = "serial_crash_cpp_mocs",
    srcs = test_cpp_moc_srcs(SERIAL_CRASH_TESTS_COMMON_SRCS),
    deps = QT_DEPS,
)

qt_cc_test(
    name = "serial_crash_tests",
    srcs = local_test_srcs(SERIAL_CRASH_TESTS_COMMON_SRCS) + local_test_hdrs(SERIAL_CRASH_TESTS_COMMON_HDRS),
    copts = COMMON_COPTS + [
        "-I.",
        "-Itests",
        "-Iserial_port",
    ],
    linkopts = COMMON_LINKOPTS,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = QT_DEPS + [
        ":serial_crash_cpp_mocs",
        ":test_header_mocs",
        "//:fastecu_core_common",
        "//:fastecu_platform_unix",
    ],
)

qt_cpp_moc_headers(
    name = "mut_dma_integration_cpp_mocs",
    srcs = test_cpp_moc_srcs(MUT_DMA_INTEGRATION_TESTS_COMMON_SRCS),
    deps = QT_DEPS,
)

qt_cc_test(
    name = "mut_dma_integration_tests",
    srcs = local_test_srcs(MUT_DMA_INTEGRATION_TESTS_COMMON_SRCS) + local_test_hdrs(MUT_DMA_INTEGRATION_TESTS_COMMON_HDRS),
    copts = COMMON_COPTS + [
        "-I.",
        "-Itests",
        "-Iserial_port",
        "-Iprotocol",
    ],
    linkopts = COMMON_LINKOPTS,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = QT_DEPS + [
        ":mut_dma_integration_cpp_mocs",
        ":test_header_mocs",
        "//:fastecu_core_common",
        "//:fastecu_platform_unix",
    ],
)

cc_test(
    name = "j2534_bridge_protocol_test",
    srcs = ["j2534_bridge_protocol_test.cpp"],
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//:j2534_bridge_protocol"],
)

cc_test(
    name = "pe_bitness_test",
    srcs = ["pe_bitness_test.cpp"],
    # No data/args wiring to the x86/x64 fixtures: this test compiles under
    # the default (host, x64) platform, but //bazel/platforms:x86_smoke_test
    # is x86-only, so a single --platforms= invocation can't build both this
    # test and its fixture. CI builds the fixtures separately (one under
    # --platforms=windows_x86, one under the default platform) and passes
    # their paths in via PE_BITNESS_X86_FIXTURE/PE_BITNESS_X64_FIXTURE env
    # vars -- see .github/workflows/pr.yml.
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//:pe_bitness"],
)

cc_test(
    name = "j2534_bridge_integration_test",
    srcs = ["j2534_bridge_integration_test.cpp"],
    args = [
        "$(location //:j2534_bridge_host)",
        "$(location //tests:fake_j2534_dll)",
    ],
    data = [
        "//:j2534_bridge_host",
        "//tests:fake_j2534_dll",
    ],
    target_compatible_with = ["@platforms//cpu:x86_32"],
    deps = ["//:j2534_bridge_protocol"],
)

cc_test(
    name = "j2534_bridge_client_test",
    srcs = ["j2534_bridge_client_test.cpp"],
    data = [
        "//:j2534_bridge_host",
        "//tests:fake_j2534_dll",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//:j2534_bridge_client"],
)

qt_cc_test(
    name = "j2534_win_bridge_test",
    srcs = ["j2534_win_bridge_test.cpp"],
    # No data wiring to //:j2534_bridge_host / //tests:fake_j2534_dll: both
    # are x86-only, while this test needs //:fastecu_platform_windows (Qt,
    # x64-only) -- no single --platforms= value satisfies both. CI builds the
    # x86 artifacts separately (--platforms=windows_x86) and passes their
    # paths in via J2534_BRIDGE_HOST_EXE/FAKE_J2534_DLL_PATH env vars -- see
    # .github/workflows/pr.yml.
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//:fastecu_platform_windows"],
)

cc_binary(
    name = "fake_j2534_dll",
    srcs = ["fake_j2534_dll.cpp"],
    copts = ["-Iserial_port"],
    linkshared = True,
    target_compatible_with = ["@platforms//cpu:x86_32"],
    win_def_file = "fake_j2534_dll.def",
    deps = ["//:j2534_bridge_protocol"],
)
