load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:mut_dma_test_suites.bzl", "MUT_DMA_GTEST_SRCS", "mut_dma_test_suites")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_LINKOPTS", "QT_DEPS", "local_test_hdrs", "local_test_srcs", "qt_cc_library", "qt_cc_test", "qt_cpp_moc_headers", "test_cpp_moc_srcs")
load("//bazel:test_sources.bzl", "MUT_DMA_INTEGRATION_TESTS_COMMON_HDRS", "MUT_DMA_INTEGRATION_TESTS_COMMON_SRCS", "MUT_DMA_TESTS_COMMON_SRCS", "SERIAL_BACKEND_TESTS_COMMON_HDRS", "SERIAL_BACKEND_TESTS_COMMON_SRCS", "SERIAL_BACKEND_TESTS_UNIX_HDRS", "SERIAL_BACKEND_TESTS_UNIX_SRCS", "SERIAL_CRASH_TESTS_COMMON_HDRS", "SERIAL_CRASH_TESTS_COMMON_SRCS")
load("//bazel:x86_windows_transition.bzl", "x86_windows_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "fake_j2534_dll_native",
    srcs = ["fake_j2534_dll.cpp"],
    additional_linker_inputs = ["fake_j2534_dll.def"],
    linkopts = ["/DEF:$(location fake_j2534_dll.def)"],
    linkshared = True,
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
    deps = ["//src/platform/desktop/windows/j2534:j2534_bridge_protocol"],
)

x86_windows_binary(
    name = "fake_j2534_dll_x86",
    binary = ":fake_j2534_dll_native",
    extension = ".dll",
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

filegroup(
    name = "cpp_sources",
    srcs = glob(["*.cpp"]),
)

qt_cc_library(
    name = "test_header_mocs",
    srcs = [],
    hdrs = [
        "fake_backend.h",
        "mock_openport.h",
    ],
    copts = COMMON_COPTS,
    deps = QT_DEPS + ["//src/platform/desktop/common/serial:serial_qt_compat"],
)

qt_cpp_moc_headers(
    name = "mut_dma_cpp_mocs",
    srcs = [
        src
        for src in test_cpp_moc_srcs(MUT_DMA_TESTS_COMMON_SRCS)
        if src not in MUT_DMA_GTEST_SRCS
    ],
    deps = QT_DEPS,
)

mut_dma_test_suites(
    header_mocs_target = ":test_header_mocs",
    moc_deps_target = ":mut_dma_cpp_mocs",
)

qt_cpp_moc_headers(
    name = "serial_backend_cpp_mocs",
    srcs = test_cpp_moc_srcs(SERIAL_BACKEND_TESTS_COMMON_SRCS + SERIAL_BACKEND_TESTS_UNIX_SRCS),
    deps = QT_DEPS,
)

qt_cc_test(
    name = "serial_backend_tests",
    srcs = local_test_srcs(SERIAL_BACKEND_TESTS_COMMON_SRCS) + local_test_hdrs(SERIAL_BACKEND_TESTS_COMMON_HDRS) + select({
        "@platforms//os:windows": [],
        "//conditions:default": local_test_srcs(SERIAL_BACKEND_TESTS_UNIX_SRCS) + local_test_hdrs(SERIAL_BACKEND_TESTS_UNIX_HDRS),
    }),
    copts = COMMON_COPTS + [
        "-I.",
        "-Itests",
        "-Isrc/platform/desktop/common/serial",
    ],
    linkopts = COMMON_LINKOPTS,
    deps = QT_DEPS + [
        ":serial_backend_cpp_mocs",
        ":test_header_mocs",
        "//src/platform/desktop/common/serial:serial_qt_compat",
    ],
)

qt_cpp_moc_headers(
    name = "serial_crash_cpp_mocs",
    srcs = test_cpp_moc_srcs(SERIAL_CRASH_TESTS_COMMON_SRCS),
    deps = QT_DEPS,
)

qt_cc_test(
    name = "serial_crash_tests",
    srcs = local_test_srcs(SERIAL_CRASH_TESTS_COMMON_SRCS) + local_test_hdrs(SERIAL_CRASH_TESTS_COMMON_HDRS),
    copts = COMMON_COPTS + [
        "-I.",
        "-Itests",
        "-Isrc/platform/desktop/common/serial",
    ],
    linkopts = COMMON_LINKOPTS,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = QT_DEPS + [
        ":serial_crash_cpp_mocs",
        ":test_header_mocs",
        "//:fastecu_platform_unix",
        "//src/platform/desktop/common/serial:serial_qt_compat",
    ],
)

qt_cpp_moc_headers(
    name = "mut_dma_integration_cpp_mocs",
    srcs = test_cpp_moc_srcs(MUT_DMA_INTEGRATION_TESTS_COMMON_SRCS),
    deps = QT_DEPS,
)

qt_cc_test(
    name = "mut_dma_integration_tests",
    srcs = local_test_srcs(MUT_DMA_INTEGRATION_TESTS_COMMON_SRCS) + local_test_hdrs(MUT_DMA_INTEGRATION_TESTS_COMMON_HDRS),
    copts = COMMON_COPTS + [
        "-I.",
        "-Itests",
        "-Isrc/platform/desktop/common/serial",
    ],
    linkopts = COMMON_LINKOPTS,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = QT_DEPS + [
        ":mut_dma_integration_cpp_mocs",
        ":test_header_mocs",
        "//src/algorithms/protocol",
        "//src/algorithms/protocol/mut_dma",
        "//src/backend/protocol",
        "//src/platform/desktop/common/serial:serial_qt_compat",
        "//src/platform/desktop/common/transport",
    ],
)

cc_test(
    name = "j2534_bridge_protocol_test",
    srcs = ["j2534_bridge_protocol_test.cpp"],
    # --config=release implies -DNDEBUG (via --compilation_mode=opt), which
    # would silently compile out this test's assert()-based pass/fail checks.
    # /UNDEBUG re-enables them. MSVC-only flag; safe here since this target is
    # Windows-only (target_compatible_with below).
    copts = ["/UNDEBUG"],
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//src/platform/desktop/windows/j2534:j2534_bridge_protocol"],
)

cc_test(
    name = "pe_bitness_test",
    srcs = ["pe_bitness_test.cpp"],
    # --config=release implies -DNDEBUG (via --compilation_mode=opt), which
    # would silently compile out this test's assert()-based pass/fail checks.
    # /UNDEBUG re-enables them. MSVC-only flag; safe here since this target is
    # Windows-only (target_compatible_with below).
    copts = ["/UNDEBUG"],
    data = [
        "//bazel/platforms:x86_smoke_test_x86",
        "//src/platform/desktop/windows/j2534:pe_bitness_x64_fixture",
    ],
    env = {
        "PE_BITNESS_X86_FIXTURE": "$(location //bazel/platforms:x86_smoke_test_x86)",
        "PE_BITNESS_X64_FIXTURE": "$(location //src/platform/desktop/windows/j2534:pe_bitness_x64_fixture)",
    },
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//src/platform/desktop/windows/j2534:pe_bitness"],
)

cc_test(
    name = "j2534_bridge_integration_test",
    srcs = ["j2534_bridge_integration_test.cpp"],
    # --config=release implies -DNDEBUG (via --compilation_mode=opt), which
    # would silently compile out this test's assert()-based pass/fail checks.
    # /UNDEBUG re-enables them. MSVC-only flag; safe here since this target is
    # Windows-only (target_compatible_with below).
    copts = ["/UNDEBUG"],
    data = [
        ":fake_j2534_dll_x86",
        "//src/platform/desktop/windows/j2534/j2534_bridge_host:j2534_bridge_host_x86",
    ],
    env = {
        "FAKE_J2534_DLL_PATH": "$(location :fake_j2534_dll_x86)",
        "J2534_BRIDGE_HOST_EXE": "$(location //src/platform/desktop/windows/j2534/j2534_bridge_host:j2534_bridge_host_x86)",
    },
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//src/platform/desktop/windows/j2534:j2534_bridge_protocol"],
)

cc_test(
    name = "j2534_bridge_client_test",
    srcs = ["j2534_bridge_client_test.cpp"],
    # --config=release implies -DNDEBUG (via --compilation_mode=opt), which
    # would silently compile out this test's assert()-based pass/fail checks.
    # /UNDEBUG re-enables them. MSVC-only flag; safe here since this target is
    # Windows-only (target_compatible_with below).
    copts = ["/UNDEBUG"],
    data = [
        ":fake_j2534_dll_x86",
        "//src/platform/desktop/windows/j2534/j2534_bridge_host:j2534_bridge_host_x86",
    ],
    env = {
        "FAKE_J2534_DLL_PATH": "$(location :fake_j2534_dll_x86)",
        "J2534_BRIDGE_HOST_EXE": "$(location //src/platform/desktop/windows/j2534/j2534_bridge_host:j2534_bridge_host_x86)",
    },
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//src/platform/desktop/windows/j2534:j2534_bridge_client"],
)

qt_cc_test(
    name = "j2534_win_bridge_test",
    srcs = ["j2534_win_bridge_test.cpp"],
    # --config=release implies -DNDEBUG (via --compilation_mode=opt), which
    # would silently compile out this test's assert()-based pass/fail checks.
    # /UNDEBUG re-enables them. MSVC-only flag; safe here since this target is
    # Windows-only (target_compatible_with below).
    copts = ["/UNDEBUG"],
    data = [
        ":fake_j2534_dll_x86",
        "//src/platform/desktop/windows/j2534/j2534_bridge_host:j2534_bridge_host_x86",
    ],
    env = {
        "FAKE_J2534_DLL_PATH": "$(location :fake_j2534_dll_x86)",
        "J2534_BRIDGE_HOST_EXE": "$(location //src/platform/desktop/windows/j2534/j2534_bridge_host:j2534_bridge_host_x86)",
    },
    target_compatible_with = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["//:fastecu_platform_windows"],
)
