load("//bazel:qt_targets.bzl", "qt_resource_via_qrc")

# Only //src/backend/definitions consumes these resources today.
package(default_visibility = ["//src/backend/definitions:__pkg__"])

qt_resource_via_qrc(
    name = "config_resource",
    files = glob(["config/*"]),
    qrc_file = "config.qrc",
    deps = ["@rules_qt//:qt_core"],
)

qt_resource_via_qrc(
    name = "kernels_resource",
    files = glob(["kernels/*"]),
    qrc_file = "kernels.qrc",
    deps = ["@rules_qt//:qt_core"],
)
